# network-traffic-des-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: mm1_example.yaml  mm1_sweep_experiment.yaml  mm1k_convergence_experiment.yaml  mm1k_example.yaml
docs/: distributions.md
scripts/: generate_plots.py  run_experiment.py
src/analytics/: __init__.py  packet_statistics.py  system_statistics.py
src/config/: __init__.py  loader.py  models.py
src/distributions/: __init__.py  base.py  continuous.py  discrete.py  poisson.py
src/events/: __init__.py  event.py  history.py  scheduler.py  types.py
src/metrics/: __init__.py  collector.py
src/queueing/: __init__.py  manager.py
src/simulation/: __init__.py  clock.py  engine.py  packet.py  router.py  server.py
src/utils/: __init__.py
src/validation/: __init__.py  convergence_experiment.py  experiment_runner.py  mm1_validation.py  parameter_sweep.py  plots.py  theoretical_metrics.py  validation_runner.py
tests/: conftest.py  test_clock.py  test_config.py  test_convergence_experiment.py  test_distributions.py  test_engine_stress.py  test_events.py  test_experiment_runner.py  test_integration_simulation.py  test_metrics.py  test_mm1_validation.py  test_packet.py  test_packet_statistics.py  test_parameter_sweep.py  test_queue_manager.py  test_queueing.py  test_router.py  test_server.py  test_system_statistics.py  test_validation.py
