[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "des-engine"
version = "0.1.0"
description = "Probability-Based Packet Arrival Simulator using Discrete Event Simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "stress: stress tests that exercise the engine at scale (10k+ events)",
    "convergence: convergence experiments that verify simulator accuracy across increasing durations",
    "sweep: parameter sweeps that explore simulator performance under varying workload intensities",
    "runner: validation of the research experiment runner framework",
]
